# tensorpipe

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  sanitizer_bl.txt  setup.py  tsan_suppressions.txt
docs/: shm.md  (+4 more)
tensorpipe/: .clang-tidy  CMakeLists.txt  config.h.in  config_cuda.h.in  tensorpipe.h  tensorpipe.h.in  tensorpipe_cuda.h  tensorpipe_xpu.h
tensorpipe/benchmark/: CMakeLists.txt  benchmark.cc  benchmark_pipe.cc  benchmark_transport.cc  channel_registry.cc  channel_registry.h  measurements.h  options.cc  options.h  registry.h  transport_registry.cc  transport_registry.h
tensorpipe/benchmark/herring/: benchmark_herring_gdr.cc  benchmark_herring_tcp.cc  benchmark_nccl.cc  cuda_kernels.cu  cuda_kernels.cuh  launch_herring_gdr.py  launch_herring_tcp.py  launch_nccl.py  setup.py  utils.py
tensorpipe/channel/: basic.cc  basic.h  channel.cc  channel.h  channel_boilerplate.h  channel_impl_boilerplate.h  context.cc  context.h  context_boilerplate.h  context_impl_boilerplate.h  cpu_context.h  cuda_context.h  error.cc  error.h  helpers.cc  helpers.h  process_vm_readv.cc  process_vm_readv.h  registry.cc  registry.h
tensorpipe/channel/basic/: CMakeLists.txt  basic.cc  basic.h  basic.proto  channel.cc  channel.h  channel_impl.cc  channel_impl.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/cma/: CMakeLists.txt  channel.cc  channel.h  channel_impl.cc  channel_impl.h  cma.cc  cma.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/cuda_basic/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  constants.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/cuda_gdr/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  constants.h  context.cc  context.h  context_impl.cc  context_impl.h  error.h  factory.cc  factory.h
tensorpipe/channel/cuda_gdr_xdtt/: channel_impl.cc  channel_impl.h  constants.h  context_impl.cc  context_impl.h  error.h  factory.cc  factory.h
tensorpipe/channel/cuda_ipc/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  constants.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/cuda_xth/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/intra_process/: CMakeLists.txt  intra_process.cc  intra_process.h
tensorpipe/channel/intrap/: channel.cc  channel.h  context.cc  context.h
tensorpipe/channel/mpt/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h  nop_types.h
tensorpipe/channel/xpu_basic/: channel_impl.cc  channel_impl.h  constants.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/channel/xth/: channel.cc  channel.h  channel_impl.cc  channel_impl.h  context.cc  context.h  context_impl.cc  context_impl.h  factory.cc  factory.h
tensorpipe/common/: address.cc  address.h  allocator.cc  allocator.h  buffer.h  busy_polling_loop.h  callback.h  cpu_buffer.h  cuda.h  cuda_buffer.cc  cuda_buffer.h  cuda_event_pool.h  cuda_host_allocator.cc  cuda_host_allocator.h  cuda_lib.h  cuda_loop.cc  cuda_loop.h  deferred_executor.h  defs.h  device.h  dl.h  efa.cc  efa.h  efa_lib.h  efa_read_write_ops.h  epoll_loop.cc  epoll_loop.h  error.cc  error.h  error_macros.h  fabric.cc  fabric.h  fd.cc  fd.h  ibv.cc  ibv.h  ibv_lib.h  memory.h  nop.h  nvml_lib.h  (+21 more)
tensorpipe/context/uv/: CMakeLists.txt  loop.cc  loop.h  macros.h
tensorpipe/core/: buffer.h  buffer_helpers.h  channel.cc  channel.h  channel_selection.cc  channel_selection.h  context.cc  context.h  context_impl.cc  context_impl.h  core.proto  error.cc  error.h  error_macros.h  listener.cc  listener.h  listener_impl.cc  listener_impl.h  message.cc  message.h  nop_types.h  pipe.cc  pipe.h  pipe_impl.cc  pipe_impl.h
tensorpipe/misc/: CMakeLists.txt  dump_state_machine.cc
tensorpipe/proto/: CMakeLists.txt  all.proto  core.proto  hello.proto  message_descriptor.proto
tensorpipe/proto/channel/: CMakeLists.txt  basic.proto  cma.proto  intra_process.proto  intrap.proto  mpt.proto  xth.proto
tensorpipe/python/: CMakeLists.txt  tensorpipe.cc
tensorpipe/test/: CMakeLists.txt  peer_group.h  test.cc  test_environment.cc  test_environment.h
tensorpipe/test/channel/: CMakeLists.txt  basic_test.cc  channel_test.cc  channel_test.h  channel_test_cpu.cc  channel_test_cpu.h  channel_test_cuda.cc  channel_test_cuda.h  channel_test_cuda_multi_gpu.cc  channel_test_cuda_xdtt.cc  channel_test_xpu.cc  channel_test_xpu.h  cuda_helpers.h  kernel.cu  kernel.cuh  process_vm_readv_test.cc
tensorpipe/test/common/: CMakeLists.txt  cuda_test.cc  defs_test.cc  epoll_loop_test.cc  ringbuffer_test.cc  shm_ringbuffer_test.cc  shm_segment_test.cc  system_test.cc
tensorpipe/test/core/: CMakeLists.txt  channel_selection_test.cc  channel_test.cc  context_test.cc  listener_test.cc  pipe_cuda_test.cc  pipe_test.cc  pipe_test.h  proto_test.cc
tensorpipe/test/proto/: CMakeLists.txt  all_test.cc  core_test.cc  message_descriptor_test.cc
tensorpipe/test/python/: tensorpipe.py
tensorpipe/test/transport/: CMakeLists.txt  connection_test.cc  connection_test.h  context_test.cc  listener_test.cc  multiplexed_connection_test.cc  transport_test.cc  transport_test.h
tensorpipe/transport/: CMakeLists.txt  connection.cc  connection.h  connection_boilerplate.h  connection_impl_boilerplate.h  context.h  context_boilerplate.h  context_impl_boilerplate.h  defs.h  error.cc  error.h  error_macros.h  listener.h  listener_boilerplate.h  listener_impl_boilerplate.h  multiplexed_connection.h  registry.cc
tensorpipe/transport/efa/: connection_impl.cc  connection_impl.h  constants.h  context_impl.cc  context_impl.h  error.cc  error.h  factory.cc  factory.h  listener_impl.cc  listener_impl.h  mode.md  reactor.cc  reactor.h  sockaddr.cc  sockaddr.h  utility.cc  utility.h
tensorpipe/util/: optional.h
(+169 files in other folders)
